Enable preview in Maven package command
Enable preview features during the Maven package build.